To enable this behavior, customize the option 'completion-auto-select'
to t.  Then pressing TAB will switch to the *Completions* buffer when
it pops up that buffer.

*** New user option 'completion-wrap-movement'.
When non-nil, the commands 'next-completion' and 'previous-completion'
automatically wrap around on reaching the beginning or the end of
the *Completions* buffer.

** Isearch and Replace

+++
*** New user option 'char-fold-override' disables default character equivalences.

+++
*** New command 'isearch-emoji-by-name'.
It is bound to 'C-x 8 e RET' during an incremental search.  The
command accepts the Unicode name of an Emoji (for example, "smiling
face" or "heart with arrow"), like 'C-x 8 e e', with minibuffer
completion, and adds the Emoji into the search string.

** New minor mode 'glyphless-display-mode'.
This allows an easy way to toggle seeing all glyphless characters in
the current buffer.

** Registers

+++
*** Buffer names can now be stored in registers.
For instance, to enable jumping to the "*Messages*" buffer with
'C-x r j m':

    (set-register ?m '(buffer . "*Messages*"))

** pixel-fill

+++
*** This is a new package that deals with filling variable-pitch text.

+++
*** New function 'pixel-fill-region'.
This fills the region to be no wider than a specified pixel width.

** Info

---
*** New command 'Info-goto-node-web' and key binding 'G'.
This will take you to the gnu.org web server's version of the current
info node.  This command only works for the Emacs and Emacs Lisp manuals.

** vc

---
*** 'C-x v v' on an unregistered file will now use the most specific backend.
Previously, if you had an SVN-covered "~/" directory, and a Git-covered
directory in "~/foo/bar", using 'C-x v v' on a new, unregistered file
"~/foo/bar/zot" would register it in the SVN repository in "~/" instead of
in the Git repository in "~/foo/bar".  This makes this command
consistent with 'vc-responsible-backend'.

** Message

---