@@ -418,6 +418,12 @@ When non-nil, the commands 'next-completion' and 'previous-completion'
 automatically wrap around on reaching the beginning or the end of
 the *Completions* buffer.
 
+*** New user option 'completions-sort'.
+Controls the sorting of the completion candidates in the *Completions*
+buffer.  Available styles are no sorting, alphabetical (the default),
+or a custom sort function.  The function takes and returns a list of
+completion candidate strings.
+
 ** Isearch and Replace
 
 +++
